refactor: 주문 서비스 내부에 주문 서비스용 dto로 수정